Update Links posts

--- a/index.html
+++ b/index.html
@@ -91,27 +91,41 @@
 
         <div class="owl-carousel owl-theme">
             
-            <div class="item">
-                <img class="box" src="resources/imgs/1.1.jpg" alt="">
-            </div>
-            <div class="item">
-                <img class="box" src="resources/imgs/1.3.jpg" alt="">
-            </div>
-            <div class="item">
-                <img class="box" src="resources/imgs/1.6.jpg" alt="">
-            </div>
-            <div class="item">
-                <img class="box" src="resources/imgs/1.7.jpg" alt="">
-            </div>
-            <div class="item">
-                <img class="box" src="resources/imgs/1.2.jpg" alt="">
-            </div>
-            <div class="item">
-                <img class="box" src="resources/imgs/1.4.jpg" alt="">
-            </div>
-            <div class="item">
-                <img class="box" src="resources/imgs/1.5.jpg" alt="">
-            </div>
+            <a href="https://www.instagram.com/p/CVLkpTaJEwD/" target="blank">
+                <div class="item">
+                    <img class="box" src="resources/imgs/1.1.jpg" alt="">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/p/CU7rTMTLhdi/" target="blank">
+                <div class="item">
+                    <img class="box" src="resources/imgs/1.3.jpg" alt="">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/p/CWEdYv-pBGj/"target="blank">
+                <div class="item">
+                    <img class="box" src="resources/imgs/1.6.jpg" alt="">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/p/CV3IqPapf2d/"target="blank">
+                <div class="item">
+                    <img class="box" src="resources/imgs/1.7.jpg" alt="">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/p/CTPQC6_HmXa/"target="blank">
+                <div class="item">
+                    <img class="box" src="resources/imgs/1.2.jpg" alt="">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/p/CUOEb7Fp4FV/"target="blank">
+                <div class="item">
+                    <img class="box" src="resources/imgs/1.4.jpg" alt="">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/p/CT2Mgnmlxmf/"target="blank">
+                <div class="item">
+                    <img class="box" src="resources/imgs/1.5.jpg" alt="">
+                </div>
+            </a>
             
         </div>
     </div>
